# KubeMindNexus

./: LICENSE  README.md  api_server.py  config.json  direct_run.py  initialize_db.sql  main.py  pyproject.toml  requirements.txt  run_streamlit.py  set_llm_api_key.py  setup.sh  test_llm_init.py  ui_server.py
KubeMindNexus/: pyproject.toml
KubeMindNexus/kubemindnexus/api/: routes.py
KubeMindNexus/kubemindnexus/config/: config.py  settings.py
KubeMindNexus/kubemindnexus/database/: client.py  models.py
KubeMindNexus/kubemindnexus/llm/: factory.py  react.py
KubeMindNexus/kubemindnexus/mcp/: server.py
KubeMindNexus/kubemindnexus/ui/: app.py
docs/: api_architecture.md  api_reference.md  enhanced_system_prompt.md  example_mcp_server.md
docs/react_loop/: error_handling_design.md  task_completion_design.md
kubemindnexus/: __init__.py  __main__.py  config.py  constants.py  database.py
kubemindnexus/api/: __init__.py  app.py  routes.py
kubemindnexus/config/: __init__.py  default_config.json  settings.py
kubemindnexus/llm/: __init__.py  base.py  client.py  deepseek.py  ollama.py  openai.py  openrouter.py  react.py
kubemindnexus/mcp/: __init__.py  cluster.py  hub.py  manager.py  server.py
kubemindnexus/prompts/: attempt_completion.py  system.py
kubemindnexus/ui/: __init__.py  api_client.py  app.py
kubemindnexus/utils/: logger.py
