[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kubemindnexus"
version = "0.1.0"
description = "Kubernetes clusters management MCP client with LLM capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Lewis Guo", email = "guolisen@gmail.com"}
]
keywords = ["kubernetes", "k8s", "mcp", "llm", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.23.0",
    "streamlit>=1.27.0",
    "pydantic>=2.4.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "rich>=13.6.0",
    "setuptools>=78.1.0",
    "wheel>=0.45.1",
    "build>=1.2.2.post1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "ruff>=0.0.291",
    "mypy>=1.0.0",
]

[project.scripts]
kubemindnexus = "kubemindnexus.__main__:main"

[project.urls]
"Homepage" = "https://github.com/kubemindnexus/kubemindnexus"
"Bug Tracker" = "https://github.com/kubemindnexus/kubemindnexus/issues"

[tool.setuptools]
packages = ["kubemindnexus"]
include-package-data = true

[tool.setuptools.package-data]
kubemindnexus = ["config/config.json"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Make this more strict as code matures
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["mcp.*", "httpx.*", "rich.*", "streamlit.*", "fastapi.*", "sqlalchemy.*"]
ignore_missing_imports = true
